[VEUE-564]: Fix header bar display issue on Safari

--- a/app/javascript/style/components/_user_menu.scss
+++ b/app/javascript/style/components/_user_menu.scss
@@ -9,6 +9,9 @@
   display: flex;
   align-items: center;
 
+  // Safari workaround for improper widths...
+  justify-content: flex-end;
+
   // There is a second chevron in the mobile
   // view, so we have to be extra clear on which
   // one is being addressed
